map func update
